[package]
name = "verusdoc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
kuchiki = "0.8.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
html5ever = "0.25.2"
