[package]
name = "verusdoc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = { workspace = true }
kuchiki = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
html5ever = { workspace = true }

[lints]
workspace = true
