[package]
name = "vir"
version = "0.1.0"
authors = ["Chris Hawblitzel <Chris.Hawblitzel@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Note: do not add any dependencies on rustc -- VIR deliberately abstracts away from rustc's internals
[dependencies]
air = { path = "../air" }
vir-macros = { path = "../vir_macros" }
sise = "0.6.0"
num-bigint = { version = "0.4.3", features = ["serde"] }
num-traits= "0.2.15"
im = "15.1.0"
sha2 = "0.10.2"
serde = { version = "1", features = ["derive", "rc"] }

[features]
singular = ["air/singular"]
