[package]
name = "vir-macros"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Note: do not add any dependencies on rustc -- VIR deliberately abstracts away from rustc's internals
[dependencies]
synstructure = "0.12"
proc-macro2 = "*"
syn = "^1"

[lib]
proc-macro = true
