# This toml file is not part of the standard Verus workspace,
# and is not required to build and use Verus.
# Instead, it may optionally be used for compiling an erased vstd library
# for linking with non-Verus Rust code.

[package]
name = "vstd"
version = "0.0.0-2026-01-11-0057"
edition = "2021"
license = "MIT"
description = "Verus Standard Library: Useful specifications and lemmas for verifying Rust code"
documentation = "https://verus-lang.github.io/verus/verusdoc/vstd/"
homepage = "https://github.com/verus-lang/verus"
repository = "https://github.com/verus-lang/verus"
readme = "../../README.md"
keywords = ["verus", "verified-rust", "verification"]
categories = ["development-tools"]

[lib]
name = "vstd"
path = "vstd.rs"

[dependencies]
verus_builtin_macros = { version = "=0.0.0-2025-12-07-0054", path = "../builtin_macros" }
verus_builtin = { version = "=0.0.0-2026-01-11-0057", path = "../builtin" }
verus_state_machines_macros = { version = "=0.0.0-2025-11-23-0053", path = "../state_machines_macros" }

[features]
default = ["std"]
std = ["alloc"]
alloc = []
allocator = []
strict_provenance_atomic_ptr = []
allow_panic = [] # code is allowed to panic.


[package.metadata.verus]
verify = true
is-vstd = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(verus_keep_ghost)',
  'cfg(verus_verify_core)',
  'cfg(verus_keep_ghost_body)',
] }
