[package]
name = "verita"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple crater-inspired tool for Verus"
homepage = "https://github.com/parno/verita"
repository = "https://github.com/parno/verita"
readme = "README.md"

[dependencies]
anyhow = "1.0.83"
dunce = "1"
chrono = "0.4.38"
clap = { version = "4.3.11", features = ["derive"] }
git2 = "0.18.3"
regex = "1.10.4"
serde = { version = "1.0", features = ["std", "derive"] }
serde_json = "1.0.117"
tempdir = "0.3.7"
toml = "0.8.13"
toml_edit = "0.22"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17" }
xshell = "0.2.6"
