[package]
name = "prettyplease-fuzz"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
prettyplease = { path = "..", features = ["verbatim"] }
syn = { version = "2", default-features = false, features = ["full", "parsing"] }

[[bin]]
name = "round_trip"
path = "fuzz_targets/round_trip.rs"
test = false
doc = false

[workspace]
