[package]
name = "test"
version = "0.1.0"
edition = "2021"

[dependencies]
vstd = { path = "../../../source/vstd" }
builtin = { package = "verus_builtin", path = "../../../source/builtin" }
builtin_macros = { package = "verus_builtin_macros", path = "../../../source/builtin_macros" }
library = { path = "../library", features = ["explicit-verus-deps"] }

[package.metadata.verus]
verify = true
