[package]
name = "iters"
version = "0.1.0"
edition = "2021"

[dependencies]
vstd = { git = "https://github.com/verus-lang/verus", rev = "c3a5054" }
builtin = { git = "https://github.com/verus-lang/verus", rev = "c3a5054" }
builtin_macros = { git = "https://github.com/verus-lang/verus", rev = "c3a5054" }

[package.metadata.verus]
verify = true
